nivasa-macros/tests/trybuild/validation_dto_enum.rs
use nivasa_macros::Dto;

#[derive(Dto)]
enum InvalidEnumDto {
    Email {
        #[is_email]
        value: String,
    },
}

fn main() {}
